--- a/Develop/index.html
+++ b/Develop/index.html
@@ -28,11 +28,49 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container">
+    <div class="container row">
       <!-- Timeblocks go here -->
+      <div class="col-12 row time-block">
+        <div class="col-1 hour">8 AM</div>
+        <label></label> 
+        <!-- add label for accessibility; requires id -->
+        <textarea class="col-9 past" name="8-text" placeholder="enter event here"></textarea>
+        <button class="col-2 saveBtn"><i class="far fa-save" font-size="18px"></i></button>
+      </div>
+      <div class="col-12 row time-block">
+        <div class="col-1 hour">9 AM</div>
+        <textarea class="col-9"></textarea>
+        <button class="col-2 saveBtn">SV</button>
+      </div>
+      <div class="col-12 row time-block">
+        <div class="col-1 hour">10 AM</div>
+        <textarea class="col-9"></textarea>
+        <button class="col-2 saveBtn">SV</button>
+      </div>
+      <div class="col-12 row time-block">
+        <div class="col-1 hour">11 AM</div>
+        <textarea class="col-9"></textarea>
+        <button class="col-2 saveBtn">SV</button>
+      </div>
+      <!-- classes to use
+      textarea - background is transparent
+      description - white-space is pre-wrap (autofill suggests pre-wrap is a type of html element?)
+      time-block (autofill suggests time-block is a type of html element?)
+      row
+      hour
+      
+      past
+      present
+      future
+
+      saveBtn
+      saveBtn i:hover (what is i?) -->
+
     </div>
 
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- create js file and link here -->
+    <script src="./script.js"></script>
   </body>
 </html>
