--- a/Develop/index.html
+++ b/Develop/index.html
@@ -33,70 +33,71 @@
       <label></label>         
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="0800">8 AM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
+          <!-- <i class="far fa-save"></i> -->
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="0900">9 AM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1000">10 AM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1100">11 AM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1200">12 PM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1300">1 PM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1400">2 PM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1500">3 PM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1600">4 PM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
         <div class="col-1 hour" id="1700">5 PM</div>
-        <textarea class="col-9 future" name="8-text" placeholder="enter event here"></textarea>
+        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
           <i class="fas fa-undo-alt"></i>
         </button>
