--- a/Develop/index.html
+++ b/Develop/index.html
@@ -27,89 +27,76 @@
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
-    <div class="container row">
-      <!-- Timeblocks go here -->
-      <!-- add label for accessibility; requires id -->
-      <label></label>         
+    <div class="col-9 row time-block-holder">
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="0800">8 AM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">8 AM</div>
+        <textarea class="col-9 future" id="0800" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
-          <!-- <i class="far fa-save"></i> -->
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="0900">9 AM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">9 AM</div>
+        <textarea class="col-9 future" id="0900" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1000">10 AM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">10 AM</div>
+        <textarea class="col-9 future" id="1000" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1100">11 AM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">11 AM</div>
+        <textarea class="col-9 future" id="1100" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1200">12 PM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">12 PM</div>
+        <textarea class="col-9 future" id="1200" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1300">1 PM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">1 PM</div>
+        <textarea class="col-9 future" id="1300" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1400">2 PM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">2 PM</div>
+        <textarea class="col-9 future" id="1400" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1500">3 PM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">3 PM</div>
+        <textarea class="col-9 future" id="1500" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1600">4 PM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">4 PM</div>
+        <textarea class="col-9 future" id="1600" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
       </div>
       <div class="col-12 row time-block">
-        <div class="col-1 hour" id="1700">5 PM</div>
-        <textarea class="col-9 future" name="text" placeholder="enter event here"></textarea>
+        <div class="col-1 hour">5 PM</div>
+        <textarea class="col-9 future" id="1700" name="text" placeholder="enter event here"></textarea>
         <button class="col-2 saveBtn" style="font-size: 24px">
-          <i class="fas fa-undo-alt"></i>
+          <i class="far fa-save"></i>
         </button>
-      </div>
-      
-      <!-- classes to use
-      description - white-space is pre-wrap (autofill suggests pre-wrap is a type of html element?)
-      time-block (autofill suggests time-block is a type of html element?)(where does time-block class need to go?)
-       -->
-
-    </div>
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dayjs/1.10.7/dayjs.min.js"></script>
     <script>
       dayjs().format()
